--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>👶 Bé Bò Thu Thập Đồ Chơi</h1>
+  <h1>👶 Game của Thỏ</h1>
   <canvas id="gameCanvas" width="600" height="400"></canvas>
   <div class="info">
     <p>🎯 Điểm: <span id="score">0</span></p>
@@ -17,3 +17,4 @@
   <script src="game.js"></script>
 </body>
 </html>
+
