--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Game về bé Thỏ</title>
+  <title>Game Bé Tập Thu Thập</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>👶 Game của Thỏ</h1>
+  <h1>👶 Bé Thu Thập Đồ Vật</h1>
+  <p>🧠 Trạng thái hiện tại: <span id="currentState">Ăn</span></p>
   <canvas id="gameCanvas" width="600" height="400"></canvas>
   <div class="info">
     <p>🎯 Điểm: <span id="score">0</span></p>
@@ -17,4 +17,3 @@
   <script src="game.js"></script>
 </body>
 </html>
-
